--- a/index.html
+++ b/index.html
@@ -67,4 +67,70 @@
   <img src="hama3.jpg" alt="Buah kakao rusak digigit tikus" class="w-full h-40 object-cover" />
   <div class="p-4">
     <h3 class="font-bold text-lg mb-2">3. Tikus</h3>
-    <p>Tikus menggigit kulit dan biji kakao, menyebabkan kerugian produksi di kebun. Tikus sering merusak buah dan batang muda kakao. Upaya pengendalian dilakukan dengan menjaga kebersihan kebun dari semak
+    <p>Tikus menggigit kulit dan biji kakao, menyebabkan kerugian produksi di kebun. Tikus sering merusak buah dan batang muda kakao. Upaya pengendalian dilakukan dengan menjaga kebersihan kebun dari semak atau rumput tinggi, memasang perangkap di jalur tikus, serta menggunakan rodentisida secara hati-hati. Selain itu, pemeliharaan burung hantu sebagai predator alami juga sangat efektif untuk mengurangi populasi tikus secara berkelanjutan.</p>
+  </div>
+</div>
+
+<!-- Hama 4 -->
+<div class="bg-white rounded-xl shadow-lg overflow-hidden" data-aos="zoom-in">
+  <img src="hama4.jpg" alt="Larva penggerek batang" class="w-full h-40 object-cover" />
+  <div class="p-4">
+    <h3 class="font-bold text-lg mb-2">4. Ulat Juring (Carmenta sp.)</h3>
+    <p>Larva menggerek batang tanaman kakao, menghambat penyaluran air dan nutrisi. Untuk mengendalikan ulat juring buah, petani perlu melakukan sanitasi rutin dengan memusnahkan buah yang terinfeksi, memangkas tajuk pohon untuk mengurangi kelembapan, serta memasang perangkap feromon guna mengganggu proses perkawinan serangga. Pada saat populasi tinggi, penggunaan insektisida selektif seperti emamektin benzoat bisa dilakukan dengan dosis yang sesuai.</p>
+  </div>
+</div>
+
+    <!-- Laporan Hama -->
+    <section id="laporan" data-aos="fade-up">
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">Laporkan Serangan Hama</h2>
+      <p class="mb-4">Isi formulir berikut untuk membantu penanganan cepat oleh penyuluh.</p>
+
+      <form class="bg-white rounded-lg shadow p-6 space-y-4">
+        <div>
+          <label class="block font-semibold">Nama Lengkap</label>
+          <input type="text" class="w-full border rounded px-3 py-2 mt-1" placeholder="Contoh: Budi Santoso" required />
+        </div>
+        <div>
+          <label class="block font-semibold">Lokasi Kebun</label>
+          <input type="text" class="w-full border rounded px-3 py-2 mt-1" placeholder="Kampung, Kecamatan, Kabupaten" required />
+        </div>
+        <div>
+          <label class="block font-semibold">Deskripsi Hama</label>
+          <textarea class="w-full border rounded px-3 py-2 mt-1" rows="4" placeholder="Contoh: Buah menguning dan mengering sebelum matang..." required></textarea>
+        </div>
+        <div>
+          <label class="block font-semibold">Unggah Foto (opsional)</label>
+          <input type="file" class="mt-2" />
+        </div>
+        <button type="submit" class="bg-green-700 text-white px-6 py-2 rounded hover:bg-green-800">
+          Kirim Laporan
+        </button>
+      </form>
+    </section>
+
+    <!-- Kontak -->
+    <section id="kontak" data-aos="fade-up">
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">Kontak Penyuluh</h2>
+      <div class="bg-green-100 p-6 rounded-lg space-y-2 text-sm">
+        <p><strong>Nama:</strong> Ilham Muis</p>
+        <p><strong>Instansi:</strong> Dinas Perkebunan Kabupaten Berau</p>
+        <p><strong>WhatsApp:</strong> <a href="https://wa.me/6281258702099" target="_blank" class="text-green-800 font-semibold hover:underline">+62 812-5870-2099</a></p>
+        <p><strong>Email:</strong> ilhammuis5@gmail.com</p>
+      </div>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-green-800 text-white text-sm py-6 mt-12">
+    <div class="max-w-6xl mx-auto px-4 text-center">
+      &copy; 2025 Dinas Perkebunan Kabupaten Berau • Edukasi Hama Kakao • Penyuluh: Ilham Muis
+    </div>
+  </footer>
+
+  <!-- AOS Animation -->
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
+
+</body>
+</html>
