--- a/index (1).html
+++ b/index (1).html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html> 
 <html lang="id">
 <head>
@@ -16,122 +15,4 @@
       <div class="flex items-center gap-3">
         <img src="logo-berau.jpg" alt="Logo Berau" class="w-10 h-10" />
         <div>
-          <h1 class="font-bold text-lg">HAMA KAKAO DAN PENGENDALIANNYA</h1>
-          <p class="text-xs">Dinas Perkebunan Kabupaten Berau</p>
-        </div>
-      </div>
-      <nav class="space-x-4 text-sm">
-        <a href="#pendahuluan" class="hover:underline">Pendahuluan</a>
-        <a href="#jenis-hama" class="hover:underline">Jenis Hama</a>
-        <a href="#laporan" class="hover:underline">Laporan</a>
-        <a href="#kontak" class="hover:underline">Kontak</a>
-      </nav>
-    </div>
-  </header>
-
-  <!-- Konten -->
-  <main class="max-w-6xl mx-auto px-4 py-10 space-y-14">
-
-    <!-- Pendahuluan -->
-    <section id="pendahuluan" data-aos="fade-up">
-      <h2 class="text-2xl font-semibold text-green-700 mb-4">Mengapa Penting Mengenal Hama Kakao?</h2>
-      <p>
-        Tanaman kakao merupakan salah satu komoditas andalan di Kabupaten Berau. Serangan hama pada tanaman kakao dapat menurunkan hasil panen secara signifikan.
-        Maka dari itu ayo kita kenal hama yang sering menyerang tanaman kakao serta mengendalikan hama secara efektif.
-      </p>
-    </section>
-
-    <section id="jenis-hama" data-aos="fade-up">
-  <h2 class="text-2xl font-semibold text-green-700 mb-6">Jenis-Jenis Hama pada Kakao</h2>
-  <div class="grid gap-8 sm:grid-cols-2">
-
-    <!-- Hama 1 -->
-<div class="bg-white rounded-xl shadow-lg overflow-hidden" data-aos="zoom-in">
-  <img src="hama1.jpg" alt="Buah kakao busuk akibat hama" class="w-full h-40 object-cover" />
-  <div class="p-4">
-    <h3 class="font-bold text-lg mb-2">1. Busuk Buah Kakao</h3>
-    <p>Buah kakao rusak oleh jamur atau hama, mengakibatkan biji membusuk dan panen gagal...</p>
-  </div>
-</div>
-
-<!-- Hama 2 -->
-<div class="bg-white rounded-xl shadow-lg overflow-hidden" data-aos="zoom-in">
-  <img src="hama2.jpg" alt="Kepik Helopeltis" class="w-full h-40 object-cover" />
-  <div class="p-4">
-    <h3 class="font-bold text-lg mb-2">2. Kepik Helopeltis spp.</h3>
-    <p>Serangan hama yang menyerap cairan dari buah muda kakao, menyebabkan bercak hitam...</p>
-  </div>
-</div>
-
-<!-- Hama 3 -->
-<div class="bg-white rounded-xl shadow-lg overflow-hidden" data-aos="zoom-in">
-  <img src="hama3.jpg" alt="Buah kakao rusak digigit tikus" class="w-full h-40 object-cover" />
-  <div class="p-4">
-    <h3 class="font-bold text-lg mb-2">3. Tikus</h3>
-    <p>Tikus menggigit kulit dan biji kakao, menyebabkan kerugian produksi di kebun...</p>
-  </div>
-</div>
-
-<!-- Hama 4 -->
-<div class="bg-white rounded-xl shadow-lg overflow-hidden" data-aos="zoom-in">
-  <img src="hama4.jpg" alt="Larva penggerek batang" class="w-full h-40 object-cover" />
-  <div class="p-4">
-    <h3 class="font-bold text-lg mb-2">4. Ulat Juring (Carmenta sp.)</h3>
-    <p>Larva menggerek batang tanaman kakao, menghambat penyaluran air dan nutrisi...</p>
-  </div>
-</div>
-
-    <!-- Laporan Hama -->
-    <section id="laporan" data-aos="fade-up">
-      <h2 class="text-2xl font-semibold text-green-700 mb-4">Laporkan Serangan Hama</h2>
-      <form class="bg-white rounded-lg shadow p-6 space-y-4">
-        <div><label class="block font-semibold">Nama Lengkap</label>
-        <input type="text" class="w-full border rounded px-3 py-2 mt-1" placeholder="Contoh: Budi Santoso" required /></div>
-        <div><label class="block font-semibold">Lokasi Kebun</label>
-        <input type="text" class="w-full border rounded px-3 py-2 mt-1" placeholder="Kampung, Kecamatan, Kabupaten" required /></div>
-        <div><label class="block font-semibold">Deskripsi Hama</label>
-        <textarea class="w-full border rounded px-3 py-2 mt-1" rows="4" placeholder="Contoh: Buah menguning..." required></textarea></div>
-        <div><label class="block font-semibold">Unggah Foto (opsional)</label>
-        <input type="file" class="mt-2" /></div>
-        <button type="submit" class="bg-green-700 text-white px-6 py-2 rounded hover:bg-green-800">Kirim Laporan</button>
-      <!-- Laporan Hama -->
-<section id="laporan" data-aos="fade-up">
-  <h2 class="text-2xl font-semibold text-green-700 mb-4">Laporkan Serangan Hama</h2>
-  <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdPwNSfdPEzczjKflQLoF_4fOTqk8lPuTYdXJ5m3jC6TXkQeQ/formResponse" method="POST" target="_blank" class="bg-white rounded-lg shadow p-6 space-y-4">
-    <div>
-      <label class="block font-semibold">Nama Lengkap</label>
-      <input type="text" name="entry.1111111111" class="w-full border rounded px-3 py-2 mt-1" placeholder="Contoh: Budi Santoso" required>
-    </div>
-    <div>
-      <label class="block font-semibold">Lokasi Kebun</label>
-      <input type="text" name="entry.2222222222" class="w-full border rounded px-3 py-2 mt-1" placeholder="Kampung, Kecamatan, Kabupaten" required>
-    </div>
-    <div>
-      <label class="block font-semibold">Deskripsi Hama</label>
-      <textarea name="entry.3333333333" class="w-full border rounded px-3 py-2 mt-1" rows="4" placeholder="Contoh: Buah menguning..." required></textarea>
-    </div>
-    <div>
-      <label class="block font-semibold">Unggah Foto (opsional)</label>
-      <input type="file" class="mt-2" disabled title="Silakan unggah foto langsung melalui Google Form.">
-      <p class="text-xs text-gray-500 italic mt-1">Upload hanya bisa dilakukan langsung melalui <a href="https://docs.google.com/forms/d/e/1FAIpQLSdPwNSfdPEzczjKflQLoF_4fOTqk8lPuTYdXJ5m3jC6TXkQeQ/viewform" target="_blank" class="text-green-700 underline">Google Form</a>.</p>
-    </div>
-    <button type="submit" class="bg-green-700 text-white px-6 py-2 rounded hover:bg-green-800">Kirim Laporan</button>
-  </form>
-</section>
-
-
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-green-800 text-white text-sm py-6 mt-12">
-    <div class="max-w-6xl mx-auto px-4 text-center">
-      &copy; 2025 Dinas Perkebunan Kabupaten Berau • Edukasi Hama Kakao • Penyuluh: Ilham Muis
-    </div>
-  </footer>
-
-  <!-- AOS Animation -->
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  <script>AOS.init();</script>
-
-</body>
-</html>
+          <h1 class="font-bold text-lg">HAMA KA
