--- a/index (1).html
+++ b/index (1).html
@@ -69,4 +69,33 @@
           <input type="file" class="mt-2" disabled title="Silakan unggah langsung melalui Google Form.">
           <p class="text-xs text-gray-500 italic mt-1">Upload hanya bisa dilakukan langsung melalui <a href="https://docs.google.com/forms/d/e/1FAIpQLSdPwNSfdPEzczjKflQLoF_4fOTqk8lPuTYdXJ5m3jC6TXkQeQ/viewform" target="_blank" class="text-green-700 underline">Google Form</a>.</p>
         </div>
-        <button type="submit" class="bg-g
+        <button type="submit" class="bg-green-700 text-white px-6 py-2 rounded hover:bg-green-800">Kirim Laporan</button>
+      </form>
+    </section>
+
+    <!-- Kontak -->
+    <section id="kontak" data-aos="fade-up">
+      <h2 class="text-2xl font-semibold text-green-700 mb-4">Kontak Penyuluh</h2>
+      <div class="bg-green-100 p-6 rounded-lg space-y-2 text-sm">
+        <p><strong>Nama:</strong> Ilham Muis</p>
+        <p><strong>Instansi:</strong> Dinas Perkebunan Kabupaten Berau</p>
+        <p><strong>WhatsApp:</strong> <a href="https://wa.me/6281258702099" target="_blank" class="text-green-800 font-semibold hover:underline">+62 812-5870-2099</a></p>
+        <p><strong>Email:</strong> ilhammuis5@gmail.com</p>
+      </div>
+    </section>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-green-800 text-white text-sm py-6 mt-12">
+    <div class="max-w-6xl mx-auto px-4 text-center">
+      &copy; 2025 Dinas Perkebunan Kabupaten Berau • Edukasi Hama Kakao • Penyuluh: Ilham Muis
+    </div>
+  </footer>
+
+  <!-- AOS Animation -->
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
+
+</body>
+</html>
